- crazybirdy : Fit length for "Loading Darwin"
- meklort : Update align directives to 2^(old_align)
- Ermac : Bump svn to 2.3
- ErmaC : Update efi Header
- cparm : buffer BPS
- cparm : devprop_generate_string optimized by cparm
- ErmaC : Update CPUID and change conditional logic.
- ErmaC : Typo & ID names
- meklort : Make compile on gcc w/ errors enabled.
- bitshoveler : Remove the '-x' option from the offending 'ld' command
- Jief : Makefile dependency missing for boot0 and boot1h
- ErmaC :Temp disable klibc module
- meklort : Silence output.
- meklort : Add --no-print-directory.
- meklort : Replace \t with tab.
- ErmaC :Update Chameleon.xcodeproj
- ErmaC : Merge LZVN decompression routine by MinusZwei (C Conversion) based on works from Pike R. Alpha and AnV Software (Andy Vandijck).
- Bungo : Loading custom ECDT.aml, Darwin version string printing, clean boot-args, change firmware rev. to real Mac (0x0001000a), added  kernel-compatibility, boot-file, boot-args, machine-signature, random-seed DT properties & some minor changes.
- ErmaC : Merge tja's patch http://forum.voodooprojects.org/index.php/topic,5951.0.html
- bitshoveler : Optimized basic string functions strlen, strncmp, strncat, strcat
- ErmaC : Replaced sprintf with snprintf in spd.c.
- bitshoveler : Fixed inadvertent text buffer overflow in getDDRSerial
- bitshoveler : optimize get_hda_controller_name()
- Bungo : One of the changes as of rev2284 is boot option SystemId has now been deprecated. Instead use key SMsystemuuid in smbios.plist.
- bitshoveler : Defend against buffer overruns
- bitshoveler : Fix memory leak, defend against buffer overruns, add a check for malloc() failure
- bitshoveler : getMemoryInfoString: defend against buffer overruns, change O(n^2) algorithm to O(n)
- bitshoveler : Add closedir() to match opendir() call; relocate a malloc() call to fix a memory leak on error; better defense against buffer overruns
- bitshoveler : Improve robustness against buffer overruns