@@ -108,6 +108,9 @@ typedef struct Boot_Video	Boot_Video;
 #define kBootArgsPreLionVersion		1
 
 /* Snapshot constants of previous revisions that are supported */
+#define kBootArgsVersion1		1
+#define kBootArgsVersion2		2
+#define kBootArgsRevision2_0		0
 
 #define kBootArgsEfiMode32              32
 #define kBootArgsEfiMode64              64
@@ -118,7 +121,7 @@ typedef struct boot_args {
 
     uint8_t     efiMode;    /* 32 means 32-bit mode, 64 means 64-bit mode */
     uint8_t     debugMode;  /* Bit field with behavior changes */
-    uint8_t     __reserved1[2];
+    uint16_t    flags; //    uint8_t     __reserved1[2];
 
     char        CommandLine[BOOT_LINE_LENGTH];	/* Passed in command line */
 
@@ -140,7 +143,7 @@ typedef struct boot_args {
     uint64_t    efiRuntimeServicesVirtualPageStart; /* virtual address of defragmented runtime pages */
 
     uint32_t    efiSystemTable;   /* physical address of system table in runtime area */
-    uint32_t    __reserved2;
+    uint32_t    kslide; //    uint32_t    __reserved2;
 
     uint32_t    performanceDataStart; /* physical address of log */
     uint32_t    performanceDataSize;
@@ -151,7 +154,13 @@ typedef struct boot_args {
     uint64_t	bootMemSize;
     uint64_t    PhysicalMemorySize;
     uint64_t    FSBFrequency;
-    uint32_t    __reserved4[734];
+    //
+    uint64_t    pciConfigSpaceBaseAddress;
+    uint32_t    pciConfigSpaceStartBusNumber;
+    uint32_t    pciConfigSpaceEndBusNumber;
+    uint32_t    __reserved4[730];
+    //
+//    uint32_t    __reserved4[734];
 
 } boot_args;
 
